# autograde-idp-backend

./: .gitignore  .gitleaks.toml  Dockerfile  HANDOFF.md  README.md  cloudbuild.yaml  prd.json  pyproject.toml
.github/workflows/: ci.yml  cloud-run-deploy.yml  secret-scan.yml
app/: auth.py  curriculum.py  endpoints.py  gemini.py  github_client.py  grader.py  logging_config.py  main.py  oauth_proxy.py  roster.py  roster_writer.py  sheets_writer.py  sql_exec.py
app/evidence/: __init__.py  shell.py
app/primitives/: __init__.py  evidence_artifacts.py  evidence_shell.py  github.py  judge_llm.py
docs/: setup.md
scripts/: check_env_shaped_files.py
tests/: test_auth_middleware.py  test_curriculum.py  test_curriculum_sql.py  test_endpoints.py  test_evidence_validator.py  test_gemini.py  test_gemini_sql.py  test_github_client.py  test_grader.py  test_healthz.py  test_me_register.py  test_multi_turma.py  test_oauth_proxy.py  test_primitives_evidence_artifacts.py  test_primitives_evidence_shell.py  test_primitives_ex11.py  test_primitives_ex12.py  test_primitives_judge_llm.py  test_roster.py  test_roster_writer.py  test_sheets_writer.py  test_sql_exec.py  test_yaml_ex11.py  test_yaml_ex12.py
tests/e2e/: test_smoke.py
tests/e2e/fixtures/: roster.csv
tests/e2e/fixtures/exercicios/: 1.1.yaml  1.2.yaml
