[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograde-backend"
version = "0.2.0"
description = "Backend FastAPI do autograder IDP-TD (juiz independente, stateless)."
requires-python = ">=3.11"
authors = [{ name = "Alex Lopes Pereira", email = "alexlopespereira@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pyyaml>=6.0",
  "PyGithub>=2.5",
  "requests>=2.32",
  "tenacity>=9.0",
  "google-api-python-client>=2.140",
  "google-auth>=2.34",
  # tzdata: zoneinfo no Windows não acha timezones do SO; obrigatório pra
  # America/Sao_Paulo no rate-limit (reset à meia-noite local) rodar em CI.
  # Em Linux (Cloud Run) é redundante mas baixa-overhead (~580KB).
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
  "responses>=0.25",
  "python-jose[cryptography]>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/e2e"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
